--- a/src/app/loading/loading.component.less
+++ b/src/app/loading/loading.component.less
@@ -15,7 +15,7 @@
     animation: spin 1s linear infinite;
   }
   .text-container p{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', sans-serif;
     animation: fade 2s ease-in-out infinite alternate;
   }
   @keyframes fade {
