--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,8 +2,12 @@
     <app-background></app-background>
     <div class="card">
     <div class="card-body">
-      <h2 id="logintext">Login to Collageify</h2>
-      <form>
+      <h2 id="registertext">Register for Collageify</h2>
+      <form #registerForm="ngform">
+        <div class="form-group">
+            <label for="email">email</label>
+            <input type="text" id="email" class="form-control" placeholder="Enter your email">
+        </div>
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" id="username" class="form-control" placeholder="Enter your username">
@@ -13,10 +17,12 @@
             <input type="password" id="password" class="form-control" placeholder="Enter your password">
         </div>
         <div class="controls">
-          <button type="signup" class="btn btn-primary" (click)="register()">Register</button>
-          <button type="submit" class="btn btn-primary" (click)="submit()">Login</button>
+          <button type="signup" class="btn btn-primary" (click)="register(registerForm)" >Sign Up</button>
+          <button type="back" class="btn btn-primary" (click)="back()">Back</button>
+
         </div>
       </form>
     </div>
     </div>
 </div>
+
