--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,17 +3,17 @@
     <div class="card">
     <div class="card-body">
       <h2 id="logintext">Login to Collageify</h2>
-      <form>
+      <form [formGroup]="loginForm" (ngSubmit)="submit()" >
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control" placeholder="Enter your username">
+            <input type="text" id="username" formControlName="usernameOrEmail" class="form-control" placeholder="Enter your username">
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" class="form-control" placeholder="Enter your password">
+            <input type="password" formControlName="password" id="password" class="form-control" placeholder="Enter your password">
         </div>
         <div class="controls">
-          <button type="signup" class="btn btn-primary" (click)="register()">Register</button>
+          <button type="button" class="btn btn-primary"(click)="register()">Register</button>
           <button type="submit" class="btn btn-primary" (click)="submit()">Login</button>
         </div>
       </form>
