--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,22 +3,22 @@
     <div class="card">
     <div class="card-body">
       <h2 id="registertext">Register for Collageify</h2>
-      <form #registerForm="ngform">
+      <form [formGroup]="registerForm" (ngSubmit)="register()">
         <div class="form-group">
             <label for="email">email</label>
-            <input type="text" id="email" class="form-control" placeholder="Enter your email">
+            <input type="text" id="email" formControlName="username" class="form-control" placeholder="Enter your email" >
         </div>
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control" placeholder="Enter your username">
+            <input type="text" id="username" formControlName="username" class="form-control" placeholder="Enter your username" >
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" class="form-control" placeholder="Enter your password">
+            <input type="password" id="password" formControlName="username" class="form-control" placeholder="Enter your password" >
         </div>
         <div class="controls">
-          <button type="signup" class="btn btn-primary" (click)="register(registerForm)" >Sign Up</button>
-          <button type="back" class="btn btn-primary" (click)="back()">Back</button>
+          <button type="submit" class="btn btn-primary" (click)="register()" >Sign Up</button>
+          <button type="bu" class="btn btn-primary" (click)="back()">Back</button>
 
         </div>
       </form>
