--- a/src/app/background/background.component.less
+++ b/src/app/background/background.component.less
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: #f5f5f5;
-    background-image: url('/assets/music-album-covers-cover-art-collage-wallpaper-preview.jpg');
+    //background-image: url('/assets/music-album-covers-cover-art-collage-wallpaper-preview.jpg');
     background-repeat: no-repeat; 
     background-size: cover;
     background-position: center;
