--- a/src/app/login/login.component.less
+++ b/src/app/login/login.component.less
@@ -4,6 +4,7 @@
     align-items: center;
     height: 100vh;
   }
+  
   .card-body #logintext {
     margin-top: -3px;
     padding-bottom: 10px;
@@ -25,6 +26,7 @@
     margin-right: 15%;
     margin-bottom: 20px;
   }
+
   
   .form-control {
     
@@ -33,17 +35,32 @@
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 10px;
-  }
-  .controls{
-    ;
+    border-radius: 13px;
+    background: linear-gradient(145deg, #ebebeb, #ffffff);
+    box-shadow:  7px 7px 19px #eae8e8,
+             -7px -7px 19px #ffffff;
     
   }
+  .card{
+    background-color: #f0f6ff;
+    border-radius: 33px;
+    background: #f0f6ff;
+    box-shadow:  6px 6px 22px #c2c7cf,
+            -6px -6px 22px #ffffff
+
+
+  }
+
   .btn-primary {
     padding: 5%;
-    background-color: #0375B4;
+    background-color: #66d17b;
     color: white;
     border-radius: 15px;
     border: 0px plum;
     width: 30%;
-    margin-right: 5px;
+    margin-right: 15px;
+    border-radius: 14px;
+    background: #66d17b;
+    box-shadow:  3px 3px 6px #53a964,
+             -3px -3px 6px #79f992;
   }
