messed up some of the project structure

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="card">
     <div class="card-body">
       <h2 id="registertext">Register for Collageify</h2>
-      <form [formGroup]="registerForm" (ngSubmit)="register()">
+      <form [formGroup]="registerForm">
         <div class="form-group">
             <label for="email">email</label>
             <input type="text" id="email" formControlName="email" class="form-control" placeholder="Enter your email" >
