--- a/src/app/register/register.component.less
+++ b/src/app/register/register.component.less
@@ -1,49 +1,66 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  .card-body #logintext {
-    margin-top: -3px;
-    padding-bottom: 10px;
-    text-align: center;
-    margin-bottom: auto; /* Push the text to the top */
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.card-body #logintext {
+  margin-top: -3px;
+  padding-bottom: 10px;
+  text-align: center;
+  margin-bottom: auto; /* Push the text to the top */
+}
+
+.card {
+  font-family: 'Raleway', sans-serif;
+  width: 400px;
+  padding: 20px;
+  background-color: #D9d9d9;
+  border-radius: 10px;
+  margin: 0 12%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.form-group {
+  margin-right: 15%;
+  margin-bottom: 20px;
+}
+
+
+.form-control {
   
-  .card {
-    font-family: 'Raleway', sans-serif;
-    width: 400px;
-    padding: 20px;
-    background-color: #D9d9d9;
-    border-radius: 10px;
-    margin: 0 12%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  }
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  border-radius: 13px;
+  background: linear-gradient(145deg, #ebebeb, #ffffff);
+  box-shadow:  7px 7px 19px #eae8e8,
+           -7px -7px 19px #ffffff;
   
-  .form-group {
-    margin-right: 15%;
-    margin-bottom: 20px;
-  }
-  
-  .form-control {
-    
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-  }
-  .controls{
-    ;
-    
-  }
-  .btn-primary {
-    padding: 5%;
-    background-color: #0375B4;
-    color: white;
-    border-radius: 15px;
-    border: 0px plum;
-    width: 30%;
-    margin-right: 5px;
-  }
+}
+.card{
+  background-color: #f0f6ff;
+  border-radius: 33px;
+  background: #f0f6ff;
+  box-shadow:  6px 6px 22px #c2c7cf,
+          -6px -6px 22px #ffffff
+
+
+}
+
+.btn-primary {
+  padding: 5%;
+  background-color: #66d17b;
+  color: white;
+  border-radius: 15px;
+  border: 0px plum;
+  width: 30%;
+  margin-right: 15px;
+  border-radius: 14px;
+  background: #66d17b;
+  box-shadow:  3px 3px 6px #53a964,
+           -3px -3px 6px #79f992;
+}
